appId: host.exp.Exponent
---
# 若处于首页收起态，点击展开房间管理
- tapOn:
    id: "首页房间状态条"
    optional: true

- tapOn:
    text: ".*管理房间.*"
    optional: true

- extendedWaitUntil:
    visible: "房间成员 (2人)"
    timeout: 8000
- assertVisible:
    text: ".*异地恋小红薯妹子.*"

- tapOn:
    id: "弹幕互动标签页"
    optional: true

- tapOn:
    text: "弹幕.*"
    optional: true

- extendedWaitUntil:
    visible: ".*宝，我进房间啦，快放电影～❤️.*"
    timeout: 10000

- tapOn: "发条弹幕聊天互动吧..."
- inputText: "好勒，马上给你放！"
- pressKey: Enter

- extendedWaitUntil:
    visible: ".*好勒，马上给你放！.*"
    timeout: 5000
